# Qualia-basedS2Approach

./: .gitignore  ACADEMICALLY_RIGOROUS_EXPERIMENTAL_SECTION.tex  ACADEMIC_INTEGRITY_ANALYSIS.md  ALGORITHM_IMPLEMENTATION_REPORT.md  API_DEMOS_OVERVIEW.md  API_DOCUMENTATION.md  ARCHITECTURE_CLEANUP_REPORT.md  ARCHITECTURE_OPTIMIZATION_PLAN.md  CASE_RESULTS_ANALYSIS_REPORT.md  CHAKRA_UI_INTEGRATION_PLAN.md  CLAUDE.md  COMPLETE_EXPERIMENT_SECTION.tex  CONCLUSION_LENGTH_ANALYSIS.md  CONCLUSION_REVISION_SUMMARY.md  CORRECTED_EXPERIMENTAL_SECTION.tex  CORRECTED_EXPERIMENTAL_SECTION_FINAL.tex  CORRECTED_EXPERIMENTAL_SUMMARY.md  COT-DIR_REMEDIATION_AND_VERIFICATION_REPORT.md  DATA_SCREENING_DECLARATION.tex  DATA_SCREENING_DOCUMENTATION_SUMMARY.md  DATA_SCREENING_METHODOLOGY.tex  DIR_FOCUSED_EVALUATION_METHODOLOGY.md  Day1_Day2_优化成果报告.md  EXPERIMENTAL_DATA_IMPROVEMENT_SUMMARY.md  EXPERIMENTAL_OPTIMIZATION_REPORT.md  EXPERIMENTAL_SECTION_LENGTH_ANALYSIS.md  EXPERIMENT_DATA_VERIFICATION_REPORT.md  FINAL_EXPERIMENTAL_DATA_SUMMARY.md  FRONTEND_LAUNCH_COMPLETE.md  IMPROVED_CONCLUSION_SECTION.tex  IMPROVED_EXPERIMENTAL_SECTION.tex  MODEL_INTERFACES_README.md  MODULES_COLLABORATION_ANALYSIS.md  NEWFILE_EXPERIMENT_ENHANCEMENT_REPORT.md  OPTIMIZED_CONCLUSION_SECTION.tex  PAPER_EXPERIMENTAL_RESULTS_SUMMARY.md  PROJECT_STRUCTURE_ANALYSIS.md  README.md  REASONING_REFACTOR_SUCCESS.md  REVISED_EXPERIMENTAL_SECTION_FOCUSED.tex  (+96 more)
.bmad-core/: install-manifest.yaml
Data/: COMPLETION_REPORT.md  DATASETS_OVERVIEW.md  DATASET_STATISTICS.md  DATA_SCREENING_DECLARATION.md  dataset_loader.py  quality_validation_report.json  screening_documentation.json
classification_results/: ASDiv_complexity_classification.json  GSM8K_complexity_classification.json  MATH_complexity_classification.json  MAWPS_complexity_classification.json  Math23K_complexity_classification.json  MathQA_complexity_classification.json  SVAMP_complexity_classification.json  complexity_classification_summary.md
config/: .config_key  test.yaml  (+2 more)
cpp/: CMakeLists.txt  README.md
cpp/include/math_reasoning/: complexity_classifier.hpp
cpp/src/: complexity_classifier.cpp  deep_implicit_engine.cpp  ird_engine.cpp  mlr_processor.cpp  pattern_matcher.cpp  python_bindings.cpp  utils.cpp
(+867 files in other folders)
